Ajouts des tests